--- a/project/Scheduler/app/src/main/res/layout/activity_schedule.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_schedule.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.katlab.scheduler.Activities.ScheduleActivity">
 
+    <TextView
+        android:id="@+id/tempTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <ListView
+        android:id="@+id/listSchedule"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:visibility="invisible"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
