--- a/project/Scheduler/app/src/main/res/layout/activity_schedule.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_schedule.xml
@@ -7,16 +7,13 @@
     tools:context="com.katlab.scheduler.Activities.ScheduleActivity">
 
     <TextView
-        android:id="@+id/tempTextView"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text=""/>
 
     <ListView
         android:id="@+id/listSchedule"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:visibility="invisible"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
