--- a/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
@@ -7,4 +7,51 @@
     android:layout_height="match_parent"
     tools:context="com.katlab.scheduler.Activities.LessonDetailsActivity">
 
+    <TextView
+        android:id="@+id/textViewLessonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="32dp"/>
+
+    <TextView
+        android:id="@+id/textViewLessonTeacher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="66dp"/>
+
+    <TextView
+        android:id="@+id/textViewLessonPlace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_editor_absoluteY="105dp"
+        tools:layout_editor_absoluteX="16dp"/>
+
+    <TextView
+        android:id="@+id/textViewLessonStartTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_editor_absoluteY="167dp"
+        tools:layout_editor_absoluteX="16dp"/>
+
+    <TextView
+        android:id="@+id/textViewLessonEndTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_editor_absoluteY="210dp"
+        tools:layout_editor_absoluteX="16dp"/>
+
+    <TextView
+        android:id="@+id/textViewLessonHasTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_editor_absoluteY="263dp"
+        tools:layout_editor_absoluteX="16dp"/>
 </android.support.constraint.ConstraintLayout>
