--- a/project/Scheduler/app/src/main/res/layout/activity_schedule.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_schedule.xml
@@ -10,10 +10,14 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""/>
+        android:text=""
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp"/>
 
     <ListView
         android:id="@+id/listSchedule"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp"/>
 </android.support.constraint.ConstraintLayout>
