--- a/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
@@ -1,57 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.katlab.scheduler.Activities.LessonDetailsActivity">
+    android:orientation="vertical"
+    tools:layout_editor_absoluteY="8dp"
+    tools:layout_editor_absoluteX="8dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/textViewLessonName"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="32dp"/>
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/textViewLessonTeacher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="66dp"/>
+        <TextView
+            android:id="@+id/textViewLessonName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="textViewLessonName"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="32dp"/>
 
-    <TextView
-        android:id="@+id/textViewLessonPlace"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        tools:layout_editor_absoluteY="105dp"
-        tools:layout_editor_absoluteX="16dp"/>
+        <TextView
+                android:id="@+id/textViewLessonTeacher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textViewLessonTeacher"
+                android:layout_below="@+id/textViewLessonName"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="66dp"/>
 
-    <TextView
-        android:id="@+id/textViewLessonStartTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        tools:layout_editor_absoluteY="167dp"
-        tools:layout_editor_absoluteX="16dp"/>
+        <TextView
+                android:id="@+id/textViewLessonPlace"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textViewLessonPlace"
+                android:layout_below="@+id/textViewLessonTeacher"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="105dp"/>
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textViewLessonEndTime"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        tools:layout_editor_absoluteY="210dp"
-        tools:layout_editor_absoluteX="16dp"/>
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/textViewLessonHasTask"
-        android:layout_width="wrap_content"
+        <TextView
+                android:id="@+id/textViewLessonEndTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textViewLessonEndTime"
+                android:layout_below="@+id/textViewLessonStartTime"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="210dp"/>
+
+        <TextView
+                android:id="@+id/textViewLessonStartTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textViewLessonStartTime"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="167dp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        tools:layout_editor_absoluteY="263dp"
-        tools:layout_editor_absoluteX="16dp"/>
-</android.support.constraint.ConstraintLayout>
+        android:layout_weight="1">
+
+        <TextView
+                android:id="@+id/textViewLessonHasTask"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textViewLessonHasTask"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="263dp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="@dimen/activity_horizontal_margin">
+
+        <Button
+            android:id="@+id/buttonEditLessonDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit task"
+            android:visibility="invisible"/>
+    </RelativeLayout>
+
+</LinearLayout>
