--- a/project/Scheduler/app/src/main/res/layout/item_list_lesson.xml
+++ b/project/Scheduler/app/src/main/res/layout/item_list_lesson.xml
@@ -1,70 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewLessonStartTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp"
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".2"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:text="8.15"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewDashes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/textViewLessonStartTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""/>
+
+        <TextView
+            android:id="@+id/textViewDashes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewLessonStartTime"
+            android:text=" -- "/>
+
+        <TextView
+            android:id="@+id/textViewLessonEndTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewDashes"
+            android:text=""/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".7"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:text=" -- "
-        android:layout_below="@+id/textViewLessonStartTime"
-        android:layout_alignParentStart="true"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewLessonEndTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9.35"
+        <TextView
+            android:id="@+id/textViewLessonPlace"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:layout_below="@+id/textViewLessonName"
+            android:text=""/>
+
+        <TextView
+            android:id="@+id/textViewLessonName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:text=""
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+    </RelativeLayout>
+
+    <!--RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".2"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_alignBaseline="@+id/textViewLessonPlace"
-        android:layout_alignBottom="@+id/textViewLessonPlace"
-        android:layout_below="@+id/textViewDashes"
-        android:layout_alignParentStart="true"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewLessonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textViewLessonStartTime"
-        android:layout_toEndOf="@+id/textViewLessonStartTime"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:text="textViewLessonName"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        <ImageButton
+            android:id="@+id/imageButtonLessonDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_info_details"/>
+    </RelativeLayout-->
 
-    <TextView
-        android:id="@+id/textViewLessonPlace"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="textViewLessonPlace"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_alignBottom="@+id/imageButtonLessonDetails"
-        android:layout_toEndOf="@+id/textViewLessonEndTime"/>
-
-    <ImageButton
-        android:id="@+id/imageButtonLessonDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        app:srcCompat="@android:drawable/ic_menu_info_details"
-        android:layout_alignTop="@+id/textViewLessonStartTime"
-        android:layout_alignParentEnd="true"/>
-</RelativeLayout>
+</LinearLayout>
