--- a/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
@@ -51,32 +51,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <TextView
-                android:id="@+id/textViewLessonEndTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="textViewLessonEndTime"
-                android:layout_below="@+id/textViewLessonStartTime"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="210dp"/>
+            android:id="@+id/textViewLessonEndTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="textViewLessonEndTime"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="210dp"
+            android:layout_below="@+id/textViewLessonStartTime"
+            android:layout_alignParentStart="true"/>
 
         <TextView
-                android:id="@+id/textViewLessonStartTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="textViewLessonStartTime"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="167dp"/>
+            android:id="@+id/textViewLessonStartTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="textViewLessonStartTime"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="167dp"/>
+
+        <TextView
+            android:id="@+id/textViewGroups"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textViewLessonEndTime"
+            android:text="textViewGroups"/>
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_weight="1">
 
         <TextView
@@ -100,7 +110,16 @@
             android:id="@+id/buttonEditLessonDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit task"
+            android:text="Edit lesson"
+            android:visibility="invisible"/>
+
+        <Button
+            android:id="@+id/buttonOpenHomeTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:text="Hometask"
             android:visibility="invisible"/>
     </RelativeLayout>
 
