--- a/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_lesson_details.xml
@@ -86,22 +86,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:layout_weight="1">
-
-        <TextView
-                android:id="@+id/textViewLessonHasTask"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="textViewLessonHasTask"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="263dp"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:padding="@dimen/activity_horizontal_margin">
@@ -110,6 +94,7 @@
             android:id="@+id/buttonEditLessonDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="openEditLessonActivity"
             android:text="Edit lesson"
             android:visibility="invisible"/>
 
@@ -117,10 +102,11 @@
             android:id="@+id/buttonOpenHomeTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
+            android:onClick="openMaterialActivity"
             android:text="Hometask"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
 
 </LinearLayout>
