--- a/project/Scheduler/app/src/main/res/layout/item_list_lesson.xml
+++ b/project/Scheduler/app/src/main/res/layout/item_list_lesson.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:layout_weight=".2"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:orientation="horizontal">
 
