--- a/project/Scheduler/app/src/main/res/layout/activity_main.xml
+++ b/project/Scheduler/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.katlab.scheduler.Activities.MainActivity">
+    tools:context="com.katlab.scheduler.activities.MainActivity">
 
     <TabHost
         android:id="@+id/tabHost"
